--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
 # Application
 NODE_ENV=development
-APP_PORT=3000
-CORS_ORIGIN=*
+PORT=3000
+APP_NAME=XAM API
+API_PREFIX=api
+CORS_ORIGINS=http://localhost:3000
 
 # Database
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_DATABASE=xam_api
+DB_NAME=xam_api
 DB_LOGGING=false
-DB_MIGRATIONS_RUN=false
+DB_SYNCHRONIZE=false
+DB_SSL=false
 
 # JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=1h
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
