--- a/.env.test
+++ b/.env.test
@@ -1,14 +1,14 @@
 NODE_ENV=test
-APP_PORT=3001
-CORS_ORIGIN=*
+PORT=3001
+CORS_ORIGINS=*
 
 DB_HOST=localhost
 DB_PORT=5433
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_DATABASE=xam_api_test
+DB_NAME=xam_api_test
 DB_LOGGING=false
 DB_SYNCHRONIZE=true
 
-JWT_SECRET=test-jwt-secret-key-for-e2e-testing
+JWT_SECRET=test-jwt-secret-key-for-e2e-testing-min-32-chars
 JWT_EXPIRES_IN=1h
