--- a/package.json
+++ b/package.json
@@ -54,13 +54,17 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^16.4.5",
+    "nestjs-pino": "^4.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.28",
-    "uuid": "9"
+    "uuid": "9",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
