--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -1,6 +1,6 @@
 services:
   postgres-test:
-    image: postgres:16-alpine
+    image: postgis/postgis:16-3.4-alpine
     container_name: xam-postgres-test
     environment:
       POSTGRES_USER: postgres
