--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,10 @@ DB_SSL=false
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
+
+SWAGGER_ENABLED=true
+
+THROTTLE_TTL=60
+THROTTLE_LIMIT=100
+
+SHUTDOWN_TIMEOUT=10000
