--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: postgis/postgis:16-3.4-alpine
     container_name: xam-postgres
     restart: unless-stopped
+    platform: linux/amd64
     environment:
       POSTGRES_USER: ${DB_USERNAME:-postgres}
       POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
