--- a/.env.test
+++ b/.env.test
@@ -12,3 +12,17 @@ DB_SYNCHRONIZE=true
 
 JWT_SECRET=test-jwt-secret-key-for-e2e-testing-min-32-chars
 JWT_EXPIRES_IN=1h
+
+# MinIO Configuration for Tests
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9002
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+MINIO_REGION=us-east-1
+MINIO_PUBLIC_URL=http://localhost:9002
+
+# Storage Settings
+STORAGE_MAX_FILE_SIZE=10485760
+STORAGE_BUCKET_AVATARS=test-avatars
+STORAGE_BUCKET_GALLERY=test-gallery
