--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -15,3 +15,21 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+  minio-test:
+    image: minio/minio:latest
+    container_name: xam-minio-test
+    ports:
+      - '9002:9000'
+      - '9003:9001'
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    command: server /data --console-address ":9001"
+    tmpfs:
+      - /data
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/live']
+      interval: 5s
+      timeout: 5s
+      retries: 5
