--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "compression": "^1.8.1",
     "dotenv": "^16.4.5",
     "helmet": "^8.1.0",
+    "minio": "^8.0.6",
     "nestjs-pino": "^4.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -87,6 +88,7 @@
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
