--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:e2e:organizations": "jest --config ./test/jest-e2e.json --testPathPatterns=organizations --runInBand",
     "test:e2e:roles": "jest --config ./test/jest-e2e.json --testPathPatterns=roles --runInBand",
     "seed": "ts-node -r tsconfig-paths/register src/infrastructure/persistence/seeds/seed.ts",
+    "seed:refresh": "bun run seed -- --refresh",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "db:generate": "bun run typeorm migration:generate -d src/infrastructure/persistence/typeorm/data-source.ts -p src/infrastructure/persistence/typeorm/migrations/migration",
     "db:create": "bun run typeorm migration:create",
