refactor: consolidate database config to use DATABASE_URL
- Replace individual DB_* variables (host, port, username, password, name)
  with single DATABASE_URL connection string
- Update env.validation.ts, database.config.ts, and data-source.ts
- Add SSL support to TypeORM connection options
- Enhance .env.example with comprehensive documentation for all settings
- Add minio_data to .gitignore and use local volume instead of named volume
- Disable graceful shutdown hooks in non-production environments
- Update docker-compose default port to 3100

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,166 @@
-# Application
+# =============================================================================
+# XAM API - Environment Configuration Template
+# =============================================================================
+# Copy this file to `.env` for local development or `.env.test` for testing.
+# All variables are validated at startup using Zod (see env.validation.ts).
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# APPLICATION SETTINGS
+# -----------------------------------------------------------------------------
+
+# Environment mode: development | production | test
+# - development: enables detailed logging, Swagger docs, relaxed security
+# - production: optimized performance, strict security, minimal logging
+# - test: used for automated testing with isolated resources
 NODE_ENV=development
+
+# Port the HTTP server listens on
+# Default: 3000 for dev, use different ports to run multiple instances
 PORT=3000
+
+# Application name displayed in Swagger docs and logs
 APP_NAME=XAM API
+
+# Global API route prefix (e.g., /api/v1/users)
+# Leave empty for no prefix
 API_PREFIX=api
+
+# Allowed CORS origins for cross-origin requests
+# - Single origin: http://localhost:3000
+# - Multiple origins: http://localhost:3000,https://example.com
+# - All origins (dev only): *
+# WARNING: Never use * in production!
 CORS_ORIGINS=http://localhost:3000
 
-# Database
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=xam_api
-DB_LOGGING=false
-DB_SYNCHRONIZE=false
-DB_SSL=false
+# -----------------------------------------------------------------------------
+# DATABASE (PostgreSQL)
+# -----------------------------------------------------------------------------
+# TypeORM configuration for PostgreSQL connection.
+# Run `bun run docker:db` to start a local PostgreSQL container.
 
-# JWT
+# PostgreSQL connection URL
+# Format: postgresql://username:password@host:port/database
+# Examples:
+#   - Local: postgresql://postgres:postgres@localhost:5432/xam_api
+#   - Docker: postgresql://postgres:postgres@postgres:5432/xam_api
+#   - Cloud: postgresql://user:pass@db.example.com:5432/mydb?sslmode=require
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/xam_api
+
+# Enable SQL query logging for debugging
+# Set to true to see all executed queries in console
+# WARNING: Disable in production for performance
+DATABASE_LOGGING=false
+
+# Auto-synchronize schema with entities (TypeORM)
+# - true: automatically updates DB schema (convenient for dev)
+# - false: use migrations for schema changes (required for production)
+# WARNING: Never enable in production - use migrations instead!
+DATABASE_SYNCHRONIZE=false
+
+# Enable SSL for database connection
+# Required for most cloud database providers (AWS RDS, Heroku, etc.)
+DATABASE_SSL=false
+
+# -----------------------------------------------------------------------------
+# JWT AUTHENTICATION
+# -----------------------------------------------------------------------------
+# JSON Web Token configuration for user authentication.
+# Access tokens are short-lived, refresh tokens allow re-authentication.
+
+# Secret key for signing JWTs
+# CRITICAL: Must be at least 32 characters for security
+# CRITICAL: Generate a strong random secret for production!
+# Example: openssl rand -base64 32
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32
+
+# Access token expiration time
+# Format: 15m (minutes), 1h (hours), 7d (days)
+# Shorter = more secure but requires more frequent refresh
 JWT_EXPIRES_IN=15m
+
+# Refresh token expiration time
+# Longer duration allows users to stay logged in
+# Typical: 7d (1 week) to 30d (1 month)
 JWT_REFRESH_EXPIRES_IN=7d
 
+# -----------------------------------------------------------------------------
+# API DOCUMENTATION (Swagger/OpenAPI)
+# -----------------------------------------------------------------------------
+
+# Enable Swagger UI at /api/docs
+# Disable in production to hide API structure from public
 SWAGGER_ENABLED=true
 
+# -----------------------------------------------------------------------------
+# RATE LIMITING (Throttling)
+# -----------------------------------------------------------------------------
+# Protects against abuse and DDoS attacks.
+# Based on @nestjs/throttler.
+
+# Time window in seconds for rate limit tracking
+# Example: 60 = count requests per minute
 THROTTLE_TTL=60
+
+# Maximum requests allowed per time window per IP
+# Example: 100 = 100 requests per minute per IP
 THROTTLE_LIMIT=100
 
+# -----------------------------------------------------------------------------
+# GRACEFUL SHUTDOWN
+# -----------------------------------------------------------------------------
+
+# Maximum time (ms) to wait for in-flight requests before force shutdown
+# Allows active requests to complete during deployment/restart
+# Default: 10000 (10 seconds)
 SHUTDOWN_TIMEOUT=10000
+
+# -----------------------------------------------------------------------------
+# OBJECT STORAGE (MinIO / S3-Compatible)
+# -----------------------------------------------------------------------------
+# MinIO is used for local development as an S3-compatible object storage.
+# In production, can be replaced with AWS S3 or any S3-compatible service.
+# Run `docker-compose up minio` to start local MinIO server.
+
+# MinIO/S3 server hostname (without protocol)
+# - Local: localhost
+# - Docker: minio (container name)
+# - AWS S3: s3.amazonaws.com
+MINIO_ENDPOINT=localhost
+
+# MinIO API port (default: 9000)
+# Console/UI is typically on port 9001
+MINIO_PORT=9000
+
+# Enable HTTPS for MinIO connection
+# Set to true when using production S3 or SSL-enabled MinIO
+MINIO_USE_SSL=false
+
+# MinIO root credentials or AWS IAM access keys
+# WARNING: Use IAM roles in production instead of root credentials!
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+
+# AWS region for S3 API compatibility
+# Required even for MinIO (use any valid region string)
+MINIO_REGION=us-east-1
+
+# Public URL for accessing uploaded files
+# Used for generating public URLs returned to clients
+# Should be accessible from frontend/clients
+MINIO_PUBLIC_URL=http://localhost:9000
+
+# -----------------------------------------------------------------------------
+# STORAGE SETTINGS
+# -----------------------------------------------------------------------------
+# Application-level storage configuration.
+
+# Maximum file upload size in bytes
+# Default: 10485760 (10 MB)
+# Adjust based on your use case (avatars vs large media)
+STORAGE_MAX_FILE_SIZE=10485760
+
+# S3/MinIO bucket names for different file types
+# Separate buckets allow different access policies and lifecycle rules
+STORAGE_BUCKET_AVATARS=avatars
+STORAGE_BUCKET_GALLERY=gallery
