--- a/.env.test
+++ b/.env.test
@@ -1,28 +1,78 @@
+# =============================================================================
+# XAM API - Test Environment Configuration
+# =============================================================================
+# Used by E2E tests. Separate ports and database to avoid conflicts with dev.
+# Tests run with DB_SYNCHRONIZE=true for automatic schema updates.
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# APPLICATION SETTINGS
+# -----------------------------------------------------------------------------
+
+# Test environment mode
 NODE_ENV=test
+
+# Different port from dev (3000/3100) to run tests alongside dev server
 PORT=3001
+
+# Allow all origins for test environment
 CORS_ORIGINS=*
 
-DB_HOST=localhost
-DB_PORT=5433
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=xam_api_test
-DB_LOGGING=false
-DB_SYNCHRONIZE=true
+# -----------------------------------------------------------------------------
+# DATABASE (PostgreSQL)
+# -----------------------------------------------------------------------------
+# Uses a SEPARATE database on a DIFFERENT PORT (5433 vs 5432) to isolate
+# test data from development data. See docker-compose.yml for test DB config.
 
+# PostgreSQL connection URL (note: port 5433 for test isolation)
+DATABASE_URL=postgresql://postgres:postgres@localhost:5433/xam_api_test
+
+# Disable query logging for cleaner test output
+DATABASE_LOGGING=false
+
+# Auto-sync schema for tests (OK here since test DB is ephemeral)
+# This makes tests run without needing migrations
+DATABASE_SYNCHRONIZE=true
+
+# -----------------------------------------------------------------------------
+# JWT AUTHENTICATION
+# -----------------------------------------------------------------------------
+
+# Test-specific JWT secret (min 32 characters)
 JWT_SECRET=test-jwt-secret-key-for-e2e-testing-min-32-chars
+
+# Longer expiration for tests to avoid token refresh complexity
 JWT_EXPIRES_IN=1h
 
-# MinIO Configuration for Tests
+# -----------------------------------------------------------------------------
+# OBJECT STORAGE (MinIO)
+# -----------------------------------------------------------------------------
+# Uses DIFFERENT PORT (9002 vs 9000) to isolate test uploads from dev.
+# Test buckets are prefixed with "test-" for easy identification/cleanup.
+
+# MinIO test server settings (port 9002 for isolation)
 MINIO_ENDPOINT=localhost
 MINIO_PORT=9002
 MINIO_USE_SSL=false
+
+# MinIO credentials (same as dev for simplicity)
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
+
+# AWS region for S3 API compatibility
 MINIO_REGION=us-east-1
+
+# Public URL matching test port
 MINIO_PUBLIC_URL=http://localhost:9002
 
-# Storage Settings
+# -----------------------------------------------------------------------------
+# STORAGE SETTINGS
+# -----------------------------------------------------------------------------
+
+# Max file upload size in bytes (10 MB)
 STORAGE_MAX_FILE_SIZE=10485760
+
+# Test-specific bucket names (prefixed with "test-")
+# These are separate from dev buckets to prevent test pollution
 STORAGE_BUCKET_AVATARS=test-avatars
 STORAGE_BUCKET_GALLERY=test-gallery
