refactor: simplify health check to use public endpoint
Replace SSH-based health check with direct curl to public API endpoint.
This tests the actual user-facing URL and detects reverse proxy issues.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -142,44 +142,27 @@ jobs:
       - name: Wait for application startup
         run: sleep 10
 
-      - name: Health check via SSH
-        uses: appleboy/ssh-action@v1.2.0
-        env:
-          CONTAINER_NAME: xam-api
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_SSH_PORT }}
-          envs: CONTAINER_NAME
-          script: |
-            set -e
+      - name: Health check
+        run: |
+          MAX_RETRIES=12
+          RETRY_INTERVAL=5
 
-            MAX_RETRIES=12
-            RETRY_INTERVAL=5
+          echo "=== Checking application health ==="
 
-            echo "=== Checking application health ==="
+          for i in $(seq 1 $MAX_RETRIES); do
+            echo "Attempt $i of $MAX_RETRIES..."
 
-            for i in $(seq 1 $MAX_RETRIES); do
-              echo "Attempt $i of $MAX_RETRIES..."
+            HEALTH_STATUS=$(curl -s https://api.getthean.com/api/health/live || echo "failed")
 
-              if ! docker ps -f name="$CONTAINER_NAME" --format "{{.Status}}" | grep -q "Up"; then
-                echo "Container is not running!"
-                docker logs --tail 50 "$CONTAINER_NAME"
-                exit 1
-              fi
+            if echo "$HEALTH_STATUS" | grep -q '"status":"ok"'; then
+              echo "Health check passed!"
+              echo "Response: $HEALTH_STATUS"
+              exit 0
+            fi
 
-              HEALTH_STATUS=$(docker exec "$CONTAINER_NAME" wget -qO- http://localhost:3000/api/health/live 2>/dev/null || echo "failed")
+            echo "Health check failed, retrying in ${RETRY_INTERVAL}s..."
+            sleep $RETRY_INTERVAL
+          done
 
-              if echo "$HEALTH_STATUS" | grep -q '"status":"ok"'; then
-                echo "Health check passed!"
-                exit 0
-              fi
-
-              echo "Health check failed, retrying in ${RETRY_INTERVAL}s..."
-              sleep $RETRY_INTERVAL
-            done
-
-            echo "Health check failed after $MAX_RETRIES attempts"
-            docker logs --tail 100 "$CONTAINER_NAME"
-            exit 1
+          echo "Health check failed after $MAX_RETRIES attempts"
+          exit 1
