fix: correct account search pagination with gallery join
- Fix pagination bug where leftJoinAndSelect with gallery caused
  incorrect row counts (1 account with 10 gallery items = 10 rows)
- Split into 3 queries: count, paginated IDs, then load with gallery
- Add db:migrate:prod script for production migrations using compiled JS
- Update data-source.ts to use dynamic migration paths based on NODE_ENV
- Update migrate workflow to use db:migrate:prod for Docker container

--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -33,6 +33,6 @@ jobs:
             fi
 
             echo "=== Running database migrations ==="
-            docker exec "$CONTAINER_NAME" bun run db:migrate
+            docker exec "$CONTAINER_NAME" bun run db:migrate:prod
 
             echo "=== Migrations complete ==="
